--- a/main.scss
+++ b/main.scss
@@ -225,44 +225,9 @@ p {
         position: relative;
         left: 15em;
         bottom: 3.3em;
-        width: 0.75em;
-        height: 0.75em;
+        width: 12px;
+        height: 12px;
         background-color: black;
-        transform : rotate(45deg);
-        z-index: 0;
-    
-    
-        &::before {
-            content: "";
-            position: absolute;
-            bottom: 0px;
-            left: -6px;
-            width: 0.75em;
-            height: 0.75em;
-            border-radius: 50%;
-            background-color:black;
-    
-        }
-    
-        &::after {
-            content: "";
-            position: absolute;
-            top: -6px;
-            right: 0px;
-            width: 0.75em;
-            height: 0.75em;
-            background-color:black;
-            border-radius: 50%;
-        }
-    }
-    
-    &__heart--white {
-        position: relative;
-        left: 241.75px;
-        bottom: 63.65px;
-        width: 0.54em;
-        height: 0.54em;
-        background-color: white;
         transform : rotate(45deg);
     
     
@@ -271,10 +236,10 @@ p {
             position: absolute;
             bottom: 0px;
             left: -5.6px;
-            width: 0.54em;
-            height: 0.54em;
+            width: 12px;
+            height: 12px;
             border-radius: 50%;
-            background-color: white;
+            background-color:black;
     
         }
     
@@ -283,10 +248,59 @@ p {
             position: absolute;
             top: -5.6px;
             right: 0px;
-            width: 0.54em;
-            height: 0.54em;
+            width: 12px;
+            height: 12px;
+            background-color:black;
+            border-radius: 50%;
+        }
+    }
+    
+    &__heart--white {
+        position: relative;
+        left: 241px;
+        bottom: 63px;
+        width: 10px;
+        height: 10px;
+        background-color: white;
+        transform : rotate(45deg);
+        /*transition: background-color 400ms;*/
+
+        &:hover {
+            background: linear-gradient($secondary, $primary);
+
+            &::after {
+                background: linear-gradient($secondary, $primary);
+            }
+
+            &::before {
+                background: linear-gradient($secondary, $primary);
+            }
+        }
+    
+    
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: 0px;
+            left: -5px;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: white;
+            z-index: 1;
+            /*transition: background-color 400ms;*/
+        }
+    
+        &::after {
+            content: "";
+            position: absolute;
+            top: -5px;
+            right: 0px;
+            width: 10px;
+            height: 10px;
             background-color:white;
             border-radius: 50%;
+            /*transition: background-color 400ms;*/
         }
     }
 }
