--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,4 @@
+@import "keyframes.scss";
 $primary: #9356DC;
 $secondary: #FF79DA;
 $tertiary: #99E2D0;
@@ -502,6 +503,16 @@ footer {
                 font-weight: 700;
             }
         }
+    }
+}
+
+.delay {
+    visibility: hidden;
+    transition-delay: 500ms;
+    transition-property: visibility;
+
+    &:active {
+        visibility: visible;
     }
 }
 
