--- a/main.css
+++ b/main.css
@@ -1,4 +1,29 @@
 @charset "UTF-8";
+@-webkit-keyframes animation-visible {
+  0% {
+    visibility: hidden;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+@keyframes animation-visible {
+  0% {
+    visibility: hidden;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
 body {
   max-width: 1280px;
   min-width: 375px;
@@ -563,18 +588,6 @@ footer .footer--marge {
   font-weight: 700;
 }
 
-.delay {
-  visibility: hidden;
-  -webkit-transition-delay: 500ms;
-          transition-delay: 500ms;
-  -webkit-transition-property: visibility;
-  transition-property: visibility;
-}
-
-.delay:active {
-  visibility: visible;
-}
-
 /* La note enchantee */
 .bigcards__picture--enchantee {
   height: 15em;
@@ -620,5 +633,39 @@ footer .footer--marge {
   opacity: 0.8;
   -webkit-box-shadow: 2px 4px 15px black;
           box-shadow: 2px 4px 15px black;
+}
+
+/* Animation apparition menu */
+.delay--one {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-animation: animation-visible 200ms;
+          animation: animation-visible 200ms;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-delay: 350ms;
+          animation-delay: 350ms;
+}
+
+.delay--two {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-animation: animation-visible 200ms;
+          animation: animation-visible 200ms;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-delay: 500ms;
+          animation-delay: 500ms;
+}
+
+.delay--three {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-animation: animation-visible 200ms;
+          animation: animation-visible 200ms;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-delay: 750ms;
+          animation-delay: 750ms;
 }
 /*# sourceMappingURL=main.css.map */
