--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,4 @@
-@import "keyframes.scss";
+@import 'keyframes';
 $primary: #9356DC;
 $secondary: #FF79DA;
 $tertiary: #99E2D0;
@@ -506,15 +506,7 @@ footer {
     }
 }
 
-.delay {
-    visibility: hidden;
-    transition-delay: 500ms;
-    transition-property: visibility;
 
-    &:active {
-        visibility: visible;
-    }
-}
 
 /* La note enchantee */ 
 .bigcards__picture--enchantee {
@@ -556,4 +548,30 @@ footer {
         opacity: 0.8;
         box-shadow: 2px 4px 15px black;
     }
+}
+
+/* Animation apparition menu */ 
+
+.delay--one {
+    visibility: hidden;
+    opacity: 0;
+    animation: animation-visible 200ms;
+    animation-fill-mode: both;
+    animation-delay: 350ms;
+}
+
+.delay--two {
+    visibility: hidden;
+    opacity: 0;
+    animation: animation-visible 200ms;
+    animation-fill-mode: both;
+    animation-delay: 500ms;
+}
+
+.delay--three {
+    visibility: hidden;
+    opacity: 0;
+    animation: animation-visible 200ms;
+    animation-fill-mode: both;
+    animation-delay: 750ms;
 }
