--- a/keyframes.css
+++ b/keyframes.css
@@ -10,6 +10,7 @@
     opacity: 1;
   }
 }
+
 @keyframes animation-visible {
   0% {
     visibility: hidden;
@@ -20,6 +21,106 @@
   100% {
     visibility: visible;
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes balls {
+  0% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  100% {
+    -webkit-transform: scaleY(2);
+            transform: scaleY(2);
+  }
+}
+
+@keyframes balls {
+  0% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  100% {
+    -webkit-transform: scaleY(2);
+            transform: scaleY(2);
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spinreverse {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-animation-duration: 1000ms;
+            animation-duration: 1000ms;
+  }
+  33% {
+    -webkit-animation-duration: 666ms;
+            animation-duration: 666ms;
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+    -webkit-animation-duration: 333ms;
+            animation-duration: 333ms;
+  }
+}
+
+@keyframes spinreverse {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-animation-duration: 1000ms;
+            animation-duration: 1000ms;
+  }
+  33% {
+    -webkit-animation-duration: 666ms;
+            animation-duration: 666ms;
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+    -webkit-animation-duration: 333ms;
+            animation-duration: 333ms;
+  }
+}
+
+@-webkit-keyframes dot {
+  from {
+    visibility: hidden;
+  }
+  to {
+    visibility: visible;
+  }
+}
+
+@keyframes dot {
+  from {
+    visibility: hidden;
+  }
+  to {
+    visibility: visible;
   }
 }
 /*# sourceMappingURL=keyframes.css.map */
