--- a/keyframes.scss
+++ b/keyframes.scss
@@ -48,10 +48,30 @@
 
 @keyframes dot {
     from {
-        visibility: hidden;
+        opacity: 0;
+        transform: scale(0);
     }
 
     to {
-        visibility: visible;
+        opacity: 1;
+        transform: scale(1.5);
+    }
+}
+
+@keyframes hide {
+    0% {
+        transform: opacity(1);
+        width:100%;
+        height:100%;
+    }
+
+    90%{
+        transform: opacity(0);
+    }
+
+    100%{
+        top: -100px;
+        width:0;
+        height:0;
     }
 }
