--- a/main.scss
+++ b/main.scss
@@ -12,6 +12,7 @@ $fontawesomecolor: #7E7E7E;
 
 
 body {
+    z-index: 0;
     max-width: 1280px;
     min-width: 375px;
     margin: 0;
@@ -493,7 +494,7 @@ footer {
             margin-left: 0.5em;
             margin-bottom: -0.5em;
 
-            &--details {
+            &--detailsqs {
                 font-weight: 300;
                 color: $fontawesomecolor;
             }
@@ -501,6 +502,24 @@ footer {
             &--price {
                 margin-right: 1.1em;
                 font-weight: 700;
+            }
+        }
+
+        .palette--checkicon {
+            content: "";
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 159.2px;
+            right: 0.5em;
+            height: 64px;
+            width: 60px;
+            border-radius: 0em 0.8em 0.8em 0;
+            background-color: #99e2d0;
+
+            & i {
+                color: white;
             }
         }
     }
@@ -580,11 +599,15 @@ footer {
 
 .spinner {
     position: relative;
-    width: 10em;
-    height: 10em;
+    z-index: 200;
+    top: 20em;
+    left: 1em;
+    animation: hidden;
+    width: 20em;
+    height: 20em;
     border: solid 6px white;
-    opacity: 0.8;
-    border-radius: 50%;
+    border-radius: 50%; 
+    background-color: white;
 
     &::after {
         content: "";
@@ -597,13 +620,13 @@ footer {
         border-top-color: $primary;
         border-bottom-color: $secondary;
         border-radius: 50%;
-        animation: spin 2000ms ease-in infinite;
+        /*animation: spin 2000ms ease-in infinite;*/
     }
 
     &--load {
         position: relative;
-        bottom: 6em;
-        left: 3em;
+        bottom: 10em;
+        left: 7em;
         font-family: "Shrikhand";
     }
     
@@ -611,49 +634,43 @@ footer {
         position: relative;
         top: 0px;
         left: 0px;
-        width: 9.3em;
-        height: 9.3em;
+        width: 18.6em;
+        height: 18.6em;
         opacity: 0.8;
         border: solid 6px transparent;
         border-right-color: $primary;
         border-left-color: $secondary;
         opacity: 0.8;
         border-radius: 50%;
-        animation: spinreverse 2000ms ease-out infinite;
+        /*animation: spinreverse 2000ms ease-out infinite;*/
         transition-timing-function: cubic-bezier(1,0,1,.59);
     }
 
     &--dot {
+        content: "";
         position: relative;
-        bottom: 6em;
-        left: 3em;
+        bottom: 10em;
+        left: 7em;
         font-family: "Shrikhand";
-        opacity: 0.33;
-        animation: dot 333ms linear infinite forwards;
+        border-radius: 50%;
+        opacity: 1;
+        animation: dot 333ms linear infinite alternate-reverse both;
         animation-delay: 500ms;
-        visibility: hidden;
+    }
+
+    &--dot1 {
+        animation: dot 1s linear infinite alternate-reverse both;
+        animation-delay: 0s;
     }
 
     &--dot2 {
-        position: relative;
-        bottom: 6em;
-        left: 3em;
-        font-family: "Shrikhand";
-        opacity: 0.66;
-        animation: dot 333ms linear infinite forwards;
-        animation-delay: 1000ms;
-        visibility: hidden;
+        animation: dot 1s linear infinite alternate-reverse both;
+        animation-delay: 0.5s;
     }
 
     &--dot3 {
-        position: relative;
-        bottom: 6em;
-        left: 3em;
-        font-family: "Shrikhand";
-        opacity: 1;
-        animation: dot 333ms linear infinite forwards;
-        animation-delay: 1500ms;
-        visibility: hidden;
+        animation: dot 1s linear infinite alternate-reverse both;
+        animation-delay: 1s;
     }
     
 }
