--- a/keyframes.scss
+++ b/keyframes.scss
@@ -75,3 +75,34 @@
         height:0;
     }
 }
+
+@keyframes hidespinner {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    90% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    99% {
+        transform: translateY(0);
+    }
+
+    100% {
+        opacity: 0s;
+        transform: translateY(-1000px);
+    }
+}
+
+@keyframes rotate__icon {
+    from {
+        transform: rotate(0);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
