--- a/main.css
+++ b/main.css
@@ -168,6 +168,72 @@
   }
 }
 
+@-webkit-keyframes hidespinner {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  90% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  99% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    opacity: 0s;
+    -webkit-transform: translateY(-1000px);
+            transform: translateY(-1000px);
+  }
+}
+
+@keyframes hidespinner {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  90% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  99% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    opacity: 0s;
+    -webkit-transform: translateY(-1000px);
+            transform: translateY(-1000px);
+  }
+}
+
+@-webkit-keyframes rotate__icon {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate__icon {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 body {
   z-index: 0;
   max-width: 1280px;
@@ -693,6 +759,7 @@ footer .footer--marge {
 }
 
 .palette__entry .palette__cards {
+  position: relative;
   background-color: #FFFF;
   border-radius: 0.8em;
   margin-bottom: 1.8em;
@@ -734,7 +801,9 @@ footer .footer--marge {
 }
 
 .palette__entry .palette__cards .palette--checkicon {
-  content: "";
+  position: absolute;
+  right: -3.5em;
+  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -744,17 +813,33 @@ footer .footer--marge {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
-  top: 159.2px;
-  right: 0.5em;
-  height: 64px;
-  width: 60px;
+  height: 100%;
+  width: 5%;
   border-radius: 0em 0.8em 0.8em 0;
   background-color: #99e2d0;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .palette__entry .palette__cards .palette--checkicon i {
   color: white;
+}
+
+.palette__entry .palette__cards .palette--checkicon:hover {
+  right: 0px;
+}
+
+.palette__entry .palette__cards .palette--checkicon:hover i {
+  -webkit-animation: rotate__icon;
+          animation: rotate__icon;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-transition: -webkit-transform 500ms ease-in-out;
+  transition: -webkit-transform 500ms ease-in-out;
+  transition: transform 500ms ease-in-out;
+  transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
 }
 
 /* La note enchantee */
@@ -839,6 +924,28 @@ footer .footer--marge {
 }
 
 /* Loading spinner */
+.container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  background-color: white;
+  -webkit-animation: hidespinner 3000ms linear forwards;
+          animation: hidespinner 3000ms linear forwards;
+}
+
 .spinner {
   position: relative;
   z-index: 200;
@@ -846,8 +953,8 @@ footer .footer--marge {
   left: 1em;
   -webkit-animation: hidden;
           animation: hidden;
-  width: 20em;
-  height: 20em;
+  width: 10em;
+  height: 10em;
   border: solid 6px white;
   border-radius: 50%;
   background-color: white;
@@ -864,29 +971,31 @@ footer .footer--marge {
   border-top-color: #9356DC;
   border-bottom-color: #FF79DA;
   border-radius: 50%;
-  /*animation: spin 2000ms ease-in infinite;*/
+  -webkit-animation: spin 2000ms ease-in infinite;
+          animation: spin 2000ms ease-in infinite;
 }
 
 .spinner--load {
   position: relative;
-  bottom: 10em;
-  left: 7em;
+  bottom: 6.5em;
+  left: 2em;
   font-family: "Shrikhand";
 }
 
 .spinner--quart {
   position: relative;
   top: 0px;
-  left: 0px;
-  width: 18.6em;
-  height: 18.6em;
+  left: 1.5px;
+  width: 9.1em;
+  height: 9.1em;
   opacity: 0.8;
   border: solid 6px transparent;
   border-right-color: #9356DC;
   border-left-color: #FF79DA;
   opacity: 0.8;
   border-radius: 50%;
-  /*animation: spinreverse 2000ms ease-out infinite;*/
+  -webkit-animation: spinreverse 2000ms ease-out infinite;
+          animation: spinreverse 2000ms ease-out infinite;
   -webkit-transition-timing-function: cubic-bezier(1, 0, 1, 0.59);
           transition-timing-function: cubic-bezier(1, 0, 1, 0.59);
 }
@@ -894,8 +1003,8 @@ footer .footer--marge {
 .spinner--dot {
   content: "";
   position: relative;
-  bottom: 10em;
-  left: 7em;
+  bottom: 6.5em;
+  left: 2em;
   font-family: "Shrikhand";
   border-radius: 50%;
   opacity: 1;
@@ -921,4 +1030,7 @@ footer .footer--marge {
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
 }
+
+/* Fin du loading spinner */
+/* Animation check des plats */
 /*# sourceMappingURL=main.css.map */
